@@ -67,7 +67,7 @@ END
 IDD_CONFIG DIALOGEX 0, 0, 553, 390
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Module: cave bot"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     GROUPBOX        "Debuging",IDC_FRAME_DEBUGGING,281,261,265,61
     GROUPBOX        "Training",IDC_FRAME_TRAINING,281,181,265,77
@@ -134,6 +134,9 @@ BEGIN
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Up",IDC_MONSTER_ATTACK_UP,248,20,22,14
     PUSHBUTTON      "Down",IDC_MONSTER_ATTACK_DOWN,248,49,22,14
+    CONTROL         "Attack monsters not in list",
+                    IDC_TOOL_AUTOATTACK_ALL_MONSTERS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,65,104,10
     EDITTEXT        IDC_TOOL_AUTOATTACK_IGNORE,18,102,98,14,ES_AUTOHSCROLL
     PUSHBUTTON      ">>>",IDC_TOOL_AUTOATTACK_ADD_IGNORE,125,102,19,14
     PUSHBUTTON      "<<<",IDC_TOOL_AUTOATTACK_REMOVE_IGNORE,125,73,19,14
