@@ -27,6 +27,7 @@
 #define IDC_MONSTER_ATTACK_DOWN         1094
 #define IDC_MONSTER_ATTACK_UP           1095
 #define IDC_TOOL_AUTOATTACK_ADD_DELAY   1096
+#define IDC_TOOL_AUTOATTACK_ALL_MONSTERS 1097
 #define IDC_TOOL_AUTOATTACK_AUTOLOOTGP  1106
 #define IDC_TOOL_AUTOATTACK_STATE_LOOT  1109
 #define IDC_TOOL_AUTOATTACK_STATE_WALKER 1110
